# OHBM-Example-2026

./: README.md  contributions.csv  playground.ipynb  pyproject.toml
RNN_Tutorials/: MC_vanilla_rnn.ipynb  README.md
Reservoir_Tutorials/: README.md  experiment_1_rc_random_mc.ipynb  experiment_2_rc_tuned_mc.ipynb  experiment_3_rc_connectome_mc.ipynb  experiment_4.ipynb
pRNN_tutorials/: .gitignore  README.md  environment.yml  linear_dynamics_tutorial.ipynb  src.py  style_sheet.mplstyle
