[project]
name = "ohbm-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "echoes>=1.0.2",
    "msapy>=1.7.3",
    "netneurotools>=0.3.0",
    "networkx>=3.6.1",
    "seaborn>=0.13.2",
    "vizman>=0.2.3",
    "yanat>=0.1.5",
]
